Rendered Simple Types
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,3 +15,7 @@ Metrics/AbcSize:
   Enabled: false
 Style/OpenStructUse:
   Enabled: false
+Layout/FirstHashElementIndentation:
+  Enabled: false
+Style/DoubleNegation:
+  Enabled: false
