--- a/json_schema_spec/api/indices.put_settings.json
+++ b/json_schema_spec/api/indices.put_settings.json
@@ -46,7 +46,8 @@
       },
       "preserve_existing":{
         "type":"boolean",
-        "description":"Whether to update existing settings. If set to `true` existing settings on an index remain unchanged, the default is `false`"
+        "default": false,
+        "description":"Whether to update existing settings. If set to `true` existing settings on an index remain unchanged."
       },
       "ignore_unavailable":{
         "type":"boolean",
