Captured all defaults
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/json_schema_spec/api/tasks.cancel.json
+++ b/json_schema_spec/api/tasks.cancel.json
@@ -42,7 +42,8 @@
       },
       "wait_for_completion": {
         "type":"boolean",
-        "description":"Should the request block until the cancellation of the task and its descendant tasks is completed. Defaults to false"
+        "default": false,
+        "description":"Should the request block until the cancellation of the task and its descendant tasks is completed."
       }
     }
   }
