--- a/json_schema_spec/api/indices.put_mapping.json
+++ b/json_schema_spec/api/indices.put_mapping.json
@@ -16,7 +16,7 @@
           "parts":{
             "index":{
               "type":"list",
-              "description":"A comma-separated list of index names the mapping should be added to (supports wildcards); use `_all` or omit to add the mapping on all indices."
+              "description":"A comma-separated list of index names; use `_all` or empty string to perform the operation on all indices"
             }
           }
         }
