More Collision handling - Part 20
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/json_schema_spec/api/indices.get_settings.json
+++ b/json_schema_spec/api/indices.get_settings.json
@@ -37,7 +37,7 @@
             },
             "name":{
               "type":"list",
-              "description":"The name of the settings that should be included"
+              "description":"Comma-separated list of settings"
             }
           }
         },
@@ -49,7 +49,7 @@
           "parts":{
             "name":{
               "type":"list",
-              "description":"The name of the settings that should be included"
+              "description":"Comma-separated list of settings"
             }
           }
         }
