--- a/json_schema_spec/api/cluster.post_voting_config_exclusions.json
+++ b/json_schema_spec/api/cluster.post_voting_config_exclusions.json
@@ -26,8 +26,7 @@
       },
       "timeout":{
         "type":"time",
-        "description":"Operation timeout",
-        "default":"30s"
+        "description":"Operation timeout"
       }
     }
   }
