# More Conflict Resolutions
Signed-off-by: Theo Truong <theotr@amazon.com>

--- a/json_schema_spec/api/indices.get_field_mapping.json
+++ b/json_schema_spec/api/indices.get_field_mapping.json
@@ -64,7 +64,7 @@
       },
       "local":{
         "type":"boolean",
-        "description":"Return local information, do not retrieve the state from master node (default: false)"
+        "description":"Return local information, do not retrieve the state from cluster-manager node (default: false)"
       }
     }
   }
