--- a/json_schema_spec/api/indices.get_settings.json
+++ b/json_schema_spec/api/indices.get_settings.json
@@ -94,7 +94,7 @@
       },
       "local":{
         "type":"boolean",
-        "description":"Return local information, do not retrieve the state from master node (default: false)"
+        "description":"Return local information, do not retrieve the state from cluster-manager node (default: false)"
       },
       "include_defaults":{
         "type":"boolean",
